test_regress/t/t_queue_unsup_bad.out
%Error: t/t_queue_unsup_bad.v:23: Unsupported: Queue .delete(index) method, as is O(n) complexity and slow.
                                : ... In instance t
      q.delete(1);
        ^~~~~~
%Error: t/t_queue_unsup_bad.v:26: Unsupported: Queue .insert method, as is O(n) complexity and slow.
                                : ... In instance t
      q.insert(0, "ins0");
        ^~~~~~
%Error: t/t_queue_unsup_bad.v:27: Unsupported: Queue .insert method, as is O(n) complexity and slow.
                                : ... In instance t
      q.insert(2, "ins2");
        ^~~~~~
%Error: t/t_queue_unsup_bad.v:37: Unsupported/illegal unbounded ('$') in this context.
                                : ... In instance t
      q = {q[0], q[2:$]};   
                     ^
%Error: t/t_queue_unsup_bad.v:37: Expecting expression to be constant, but can't convert a UNBOUNDED to constant.
                                : ... In instance t
      q = {q[0], q[2:$]};   
                     ^
%Error: t/t_queue_unsup_bad.v:37: First value of [a:b] isn't a constant, maybe you want +: or -:
                                : ... In instance t
      q = {q[0], q[2:$]};   
                     ^
%Error: t/t_queue_unsup_bad.v:37: Illegal range select; type already selected, or bad dimension: type is 
                                : ... In instance t
      q = {q[0], q[2:$]};   
                  ^
%Error: t/t_queue_unsup_bad.v:46: Unsupported: Assignment pattern applies against non struct/union: QUEUEDTYPE
                                : ... In instance t
         q = '{ "BB", "CC" };   
             ^~
%Error: Exiting due to
